# sqlite-rembed

./: .gitignore  Cargo.toml  Makefile  README.md  sqlite-dist.toml  sqlite-rembed.h  test.sql
.github/workflows/: release.yaml  test.yaml
examples/simple-search/: demo.sql
src/: clients.rs  clients_vtab.rs  infer.rs  lib.rs
